# cpp-project-template

./: CMakeLists.txt  README.md  customVectorclass
CMakeModules/: CodeCoverage.cmake
include/: Greeter.h  IPerson.h  Parent.h  Person.h  greeter.h
src/: greeter.cpp  main.cpp  person.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/include/mocks/: MockIPerson.h  MockPerson.h
tests/src/: greeterTests.cpp  personTests.cpp
